@@ -45,14 +45,21 @@ static const ExtensionMap extensionMap [] = {
     { "jpeg", "image/jpeg" },
     { "jpg", "image/jpeg" },
     { "js", "application/x-javascript" },
+    { "mng", "video/x-mng" },
+    { "pbm", "image/x-portable-bitmap" },
+    { "pbm", "image/x-portable-graymap" },
     { "pdf", "application/pdf" },
     { "png", "image/png" },
+    { "ppm", "image/x-portable-pixmap" },
     { "rss", "application/rss+xml" },
     { "svg", "image/svg+xml" },
     { "text", "text/plain" },
+    { "tif", "image/tiff" },
+    { "tiff", "image/tiff" },
     { "txt", "text/plain" },
     { "xbm", "image/x-xbitmap" },
     { "xml", "text/xml" },
+    { "xpm", "image/x-xpm" },
     { "xsl", "text/xsl" },
     { "xhtml", "application/xhtml+xml" },
     { 0, 0 }
